# Telegram-bot

./: .replit  README.md  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  requirements.txt
.github/workflows/: ci.yml  daily-open.yml  deploy.yml  market-scan.yml
attached_assets/: Pasted-Add-it-and-also-enhance-the-system-with-a-fully-automat_1779363987287.txt  Pasted-Create-an-advanced-Telegram-Stock-Screener-Bot-for-Indo_1779328342949.txt  Pasted-Lets-do-it-and-Create-an-advanced-institutional-grade-I_1779415948353.txt
bot/: main.py  run_daily_open.py  run_scan.py
bot/alerts/: alert_chart.py  bid_offer.py  market_scheduler.py  notification.py  price_alerts.py  scanner.py  self_check.py  signal_engine.py
bot/bandarmology/: broker_analyzer.py
bot/charts/: chart_generator.py
bot/data/: users.json  watchlist.py  watchlists.json
bot/handlers/: callback_handlers.py  command_handlers.py
bot/heatmap/: heatmap_generator.py
bot/screener/: ara_hunter.py  big_accumulation.py  bsjp.py  filter_engine.py  scalper_pro.py  screener_engine.py
bot/sector_rotation/: sector_analyzer.py
bot/services/: ai_service.py  data_service.py
bot/utils/: constants.py  formatters.py  helpers.py
